--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EnglishQuiz">
         <activity
+            android:name=".AboutActivity"
+            android:exported="false" />
+        <activity
             android:name=".StartActivity"
             android:exported="true">
             <intent-filter>
@@ -18,19 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".MainActivity">
-        </activity>
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
-
-<!--<activity-->
-<!--android:name=".MainActivity"-->
-<!--android:exported="true">-->
-<!--<intent-filter>-->
-<!--    <action android:name="android.intent.action.MAIN" />-->
-
-<!--    <category android:name="android.intent.category.LAUNCHER" />-->
-<!--</intent-filter>-->
-<!--</activity>-->
