--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    android:installLocation="auto">
 
     <uses-permission android:name="android.permission.VIBRATE" />
 
@@ -12,6 +13,9 @@
         android:theme="@style/Theme.EnglishQuiz">
         <activity
             android:name=".FinishActivity"
+            android:exported="false" />
+        <activity
+            android:name=".StatsActivity"
             android:exported="false" />
         <activity
             android:name=".AboutActivity"
